# T0-CountingSort-Base

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: countsort-parallel.c
tests/: 1.out  2.out  3.in  3.out  4.out  5.in  5.out
